[gd_scene load_steps=2 format=3 uid="uid://b1q8x8x8x8x8"]

[ext_resource type="Script" path="res://scenes/arena/unit_stats_panel.gd" id="1"]

[node name="UnitStatsPanel" type="PanelContainer"]
custom_minimum_size = Vector2(120, 0)
size_flags_vertical = 3
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Unit Name"

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Health: 100/100"

[node name="ManaLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mana: 50/100"

[node name="AttackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Attack: 10"

[node name="ArmorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Armor: 5"

[node name="MagicResistLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Magic Resist: 20"

[node name="AttackSpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Attack Speed: 1.0"